--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^3.5.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
     "js-cookie": "^2.2.1",
     "less": "^4.1.1",
-    "less-loader": "^8.0.0",
+    "less-loader": "^5.0.0",
+    "mavon-editor": "^2.9.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-monoplasty-slide-verify": "^1.1.3",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
