--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "animate.css": "^3.5.1",
+    "animate.css": "^3.7.2",
     "axios": "^0.21.1",
+    "compression-webpack-plugin": "^5.0.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
     "js-cookie": "^2.2.1",
@@ -27,6 +28,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "image-webpack-loader": "^7.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
